# data-structure

./: CMakeLists.txt  README.md  linear_list.c  queue.c  queue.h  status.h
src/: CMakeLists.txt  linear_list.h  linked_list.c  linked_list.h  stack.c  stack.h
